--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "iobroker.onkyo",
-  "version": "0.1.12",
+  "version": "0.1.20",
   "description": "Control Onkyo AVRs with EISCP protocol from ioBroker",
   "author": "Oliver Wagner <owagner@tellerulam.com>",
   "contributors": [
     "Oliver Wagner <owagner@tellerulam.com>",
-    "bluefox <bluefox@ccu.io>"
+    "bluefox <bluefox@ccu.io>",
+    "Lars Weimar <Eisbaeeer@gmail.com>"
   ],
   "homepage": "https://github.com/ioBroker/ioBroker.onkyo",
   "license": "MIT",
