--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-compress": "~0.8.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5"
+    "grunt-exec": "~0.4.5",
+    "mocha": "^2.3.4",
+    "chai": "^3.4.1"
   },
   "bugs": {
     "url": "https://github.com/ioBroker/ioBroker.onkyo/issues"
   },
   "main": "onkyo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/mocha"
   }
 }
