--- a/package.json
+++ b/package.json
@@ -1,37 +1,48 @@
 {
   "name": "iobroker.onkyo",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Control Onkyo AVRs with EISCP protocol from ioBroker",
   "author": "Oliver Wagner <owagner@tellerulam.com>",
   "contributors": [
     "Oliver Wagner <owagner@tellerulam.com>",
-    "bluefox <dogafox@gmail.com>"
+    "bluefox <bluefox@ccu.io>",
+    "Lars Weimar <Eisbaeeer@gmail.com>"
   ],
-  "homepage": "https://github.com/ioBroker/ioBroker.onkyo",
+  "homepage": "https://github.com/iobroker/ioBroker.onkyo",
   "license": "MIT",
   "keywords": [
     "ioBroker",
     "onkyo",
+	"pioneer",
     "homematic",
     "home automation"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ioBroker/ioBroker.onkyo"
+    "url": "https://github.com/iobroker/ioBroker.onkyo"
   },
   "dependencies": {
-    "eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
+	"xml2js": "^0.4.19",
+	"eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "mocha": "^5.2.0",
-    "chai": "^4.1.2"
+      "grunt": "^0.4.5",
+      "grunt-replace": "^0.9.3",
+      "grunt-contrib-jshint": "^0.11.2",
+      "grunt-jscs": "^2.0.0",
+      "grunt-http": "^1.6.0",
+      "grunt-contrib-clean": "^0.6.0",
+      "grunt-contrib-compress": "^0.13.0",
+      "grunt-contrib-copy": "^0.8.0",
+      "grunt-exec": "^0.4.6",
+      "mocha": "^3.5.3",
+      "chai": "^4.1.2"
   },
   "bugs": {
-    "url": "https://github.com/ioBroker/ioBroker.onkyo/issues"
+    "url": "https://github.com/iobroker/ioBroker.onkyo/issues"
   },
-  "main": "onkyo.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit"
-  }
+    "test": "node node_modules/mocha/bin/mocha"
+  },
+  "readmeFilename": "README.md"
 }
