--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "ioBroker",
     "onkyo",
-	"pioneer",
+    "pioneer",
     "homematic",
     "home automation"
   ],
@@ -22,27 +22,28 @@
     "url": "https://github.com/iobroker/ioBroker.onkyo"
   },
   "dependencies": {
-	"xml2js": "^0.4.19",
-	"eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
+    "xml2js": "^0.4.19",
+    "eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
   },
   "devDependencies": {
-      "grunt": "^0.4.5",
-      "grunt-replace": "^0.9.3",
-      "grunt-contrib-jshint": "^0.11.2",
-      "grunt-jscs": "^2.0.0",
-      "grunt-http": "^1.6.0",
-      "grunt-contrib-clean": "^0.6.0",
-      "grunt-contrib-compress": "^0.13.0",
-      "grunt-contrib-copy": "^0.8.0",
-      "grunt-exec": "^0.4.6",
-      "mocha": "^3.5.3",
-      "chai": "^4.1.2"
+    "grunt": "^1.0.1",
+    "grunt-replace": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-jscs": "^3.0.1",
+    "grunt-http": "^2.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-exec": "^3.0.0",
+    "mocha": "^6.0.2",
+    "chai": "^4.1.2",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "bugs": {
     "url": "https://github.com/iobroker/ioBroker.onkyo/issues"
   },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha"
+    "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "readmeFilename": "README.md"
 }
