--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "xml2js": "^0.4.19",
-    "eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/"
+    "eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
@@ -36,8 +37,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-exec": "^3.0.0",
     "mocha": "^6.0.2",
-    "chai": "^4.1.2",
-    "@iobroker/adapter-core": "^1.0.3"
+    "chai": "^4.1.2"
   },
   "bugs": {
     "url": "https://github.com/iobroker/ioBroker.onkyo/issues"
