--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chai": "^4.1.2",
     "@iobroker/testing": "^1.1.10"
   },
+  "main": "main.js",
   "bugs": {
     "url": "https://github.com/iobroker/ioBroker.onkyo/issues"
   },
