--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,10 @@
+/**/*
+/gulpfile.js
 gulpfile.js
-tasks
-tmp
-test
-.travis.yml
-appveyor.yml
-admin/i18n
-iob_npm.done
-package-lock.json
+!/admin/**/*
+!/admin/*
+!/io-package.json
+!/package.json
+!/LICENSE
+!/README.md
+!/main.js
