--- a/package.json
+++ b/package.json
@@ -49,10 +49,9 @@
     "url": "git+https://github.com/iobroker/ioBroker.onkyo.git"
   },
   "scripts": {
-    "test": "npm run test:package && npm run test:unit",
+    "test": "npm run test:package && npm run test:integration",
     "test:integration": "mocha test/integration --exit",
     "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit",
     "release": "node node_modules/@alcalzone/release-script/bin/release.js"
   },
   "version": "2.0.5"
