--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "2.0.5",
   "author": {
     "name": "Oliver Wagner",
     "email": "owagner@tellerulam.com"
@@ -21,17 +22,18 @@
     }
   ],
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0",
+    "@iobroker/adapter-core": "^2.5.0",
     "eiscp": "https://github.com/GermanBluefox/node-eiscp/tarball/master/",
     "xml2js": "^0.4.23"
   },
   "description": "Control Onkyo AVRs with EISCP protocol from ioBroker",
   "devDependencies": {
     "@iobroker/testing": "^2.4.4",
-    "@alcalzone/release-script": "^1.9.0",
+    "@alcalzone/release-script": "^1.10.0",
+    "axios": "^0.21.1",
     "chai": "^4.3.4",
     "gulp": "^4.0.2",
-    "mocha": "^8.3.2"
+    "mocha": "^8.4.0"
   },
   "homepage": "https://github.com/iobroker/ioBroker.onkyo",
   "keywords": [
@@ -53,6 +55,5 @@
     "test:integration": "mocha test/integration --exit",
     "test:package": "mocha test/package --exit",
     "release": "node node_modules/@alcalzone/release-script/bin/release.js"
-  },
-  "version": "2.0.6"
+  }
 }
