--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     {
       "name": "Lars Weimar",
       "email": "Eisbaeeer@gmail.com"
+    },
+    {
+      "name": "Ingo Fischer",
+      "email": "iobroker@fischer-ka.de"
     }
   ],
   "dependencies": {
